--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,8 @@ steps:
  - name: 'gcr.io/$PROJECT_ID/ubuntu-curl'
    args: ['bash', './curl.sh']
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/custom-script-test2', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/custom-script-test2', '--cache-from', 'gcr.io/$PROJECT_ID/ubuntu-curl:latest',
+ ,'.']
 images: ['gcr.io/$PROJECT_ID/custom-script-test2']
 
+#'--cache-from', 'gcr.io/$PROJECT_ID/[IMAGE_NAME]:latest',
