--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,11 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
    args: ['build', '-f', 'Dockerfile.ubuntu-curl','-t', 'gcr.io/$PROJECT_ID/ubuntu-curl', '.']
- - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$PROJECT_ID/ubuntu-curl']
  - name: 'gcr.io/$PROJECT_ID/ubuntu-curl'
-   args: ['CMD','bash', '/curl.sh']
- - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/custom-script-test2', '.']
-images: ['gcr.io/$PROJECT_ID/custom-script-test2']
+   args: ['bash', '/curl.sh']
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['build', '-t', 'gcr.io/$PROJECT_ID/custom-script-test2', '.']
+# images: ['gcr.io/$PROJECT_ID/custom-script-test2']
 
 #'--cache-from', 'gcr.io/$PROJECT_ID/[IMAGE_NAME]:latest',
