--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
    args: ['build', '-f', 'Dockerfile.ubuntu-curl','-t', 'gcr.io/$PROJECT_ID/ubuntu-curl', '.']
+ - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$PROJECT_ID/ubuntu-curl']
  - name: 'gcr.io/$PROJECT_ID/ubuntu-curl'
    args: ['bash', '/curl.sh']
