--- a/Dockerfile.ubuntu-curl
+++ b/Dockerfile.ubuntu-curl
@@ -2,4 +2,4 @@ FROM ubuntu
 RUN apt-get -q update && apt-get install -qqy curl
 COPY curl.sh /curl.sh
 
-CMD ['sleep','10000000']
+CMD ["/bin/sleep", "100000"]
