--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
  - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$PROJECT_ID/ubuntu-curl']
  - name: 'gcr.io/$PROJECT_ID/ubuntu-curl'
-   args: ['bash', '/curl.sh']
+   args: ['bash','-c','/curl.sh']
 # - name: 'gcr.io/cloud-builders/docker'
 #   args: ['build', '-t', 'gcr.io/$PROJECT_ID/custom-script-test2', '.']
 # images: ['gcr.io/$PROJECT_ID/custom-script-test2']
